Fix file info preview in the settings.

--- a/html/General/Settings-section-Rice.html
+++ b/html/General/Settings-section-Rice.html
@@ -33,7 +33,7 @@
 
 <fieldset>
   <legend>File Info Formatting <span class="warning" #{if Conf['File Info Formatting'] then 'hidden' else ''}>is disabled.</span></legend>
-  <div><input name="fileInfo" class="field" spellcheck="false">: <span class="fileText file-info-preview"></span></div>
+  <div><input name="fileInfo" class="field" spellcheck="false">: <span class="file-info file-info-preview"></span></div>
   <div>Link: <code>%l</code> (truncated), <code>%L</code> (untruncated), <code>%T</code> (Unix timestamp)</div>
   <div>Original file name: <code>%n</code> (truncated), <code>%N</code> (untruncated), <code>%t</code> (Unix timestamp)</div>
   <div>Spoiler indicator: <code>%p</code></div>
