Start working on fixing things after the last merge

--- a/html/General/Index-navlinks.html
+++ b/html/General/Index-navlinks.html
@@ -7,6 +7,7 @@
 <select id="index-mode" name="Index Mode">
   <option disabled>Index Mode</option>
   <option value="paged">Paged</option>
+  <option value="infinite">Infinite Scrolling</option>
   <option value="all pages">All threads</option>
   <option value="catalog">Catalog</option>
 </select>
