--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,6 +1,28 @@
 <span class=brackets-wrap id=returnlink><a href=.././>Return</a></span> 
-<span class=brackets-wrap id=cataloglink><a href=javascript:;>Catalog</a></span> 
 <span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
-<span class=brackets-wrap id="index-last-refresh"><time title="Last index refresh">...</time></span> 
 <input type="search" id="index-search" class="field" placeholder="Search">
-<a id="index-search-clear" href="javascript:;" title="Clear search">×</a>
+<a id="index-search-clear" class="fa fa-times-circle" href="javascript:;"></a>
+&nbsp;
+<time id="index-last-refresh" title="Last index refresh">...</time>
+<span id="hidden-label" hidden>&nbsp;&mdash; <span id="hidden-count"></span> <span id="hidden-toggle">[<a href="javascript:;">Show</a>]</span></span>
+<span style="flex:1"></span>
+<select id="index-mode" name="Index Mode">
+  <option disabled>Index Mode</option>
+  <option value="paged">Paged</option>
+  <option value="infinite">Infinite Scrolling</option>
+  <option value="all pages">All threads</option>
+  <option value="catalog">Catalog</option>
+</select>
+<select id="index-sort" name="Index Sort">
+  <option disabled>Index Sort</option>
+  <option value="bump">Bump order</option>
+  <option value="lastreply">Last reply</option>
+  <option value="birth">Creation date</option>
+  <option value="replycount">Reply count</option>
+  <option value="filecount">File count</option>
+</select>
+<select id="index-size" name="Index Size">
+  <option disabled>Image Size</option>
+  <option value="small">Small</option>
+  <option value="large">Large</option>
+</select>
