Allow searching from URL bar without refreshing the page (add #s=search) Reduce loops. Because we build threads in a loop, we can build replies as we're building threads.
Go us.

--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,11 +1,10 @@
-<span class=brackets-wrap id=returnlink><a href=.././>Return</a></span> 
-<span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
 <span id="index-menu">
   <input type="search" id="index-search" class="field" placeholder="Search">
   <a id="index-search-clear" class="fa fa-times-circle" href="javascript:;"></a>
   &nbsp;
   <time id="index-last-refresh" title="Last index refresh">...</time>
   <span id="hidden-label" hidden>&nbsp;&mdash; <span id="hidden-count"></span> <span id="hidden-toggle">[<a href="javascript:;">Show</a>]</span></span>
+  <span style='flex: 1'></span>
   <select id="index-mode" name="Index Mode">
     <option disabled>Index Mode</option>
     <option value="paged">Paged</option>
@@ -27,3 +26,5 @@
     <option value="large">Large</option>
   </select>
 </span>
+<span class=brackets-wrap id=returnlink><a href=.././>Return</a></span> 
+<span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
