fix spacing in settings

--- a/src/General/html/Settings/Settings.html
+++ b/src/General/html/Settings/Settings.html
@@ -6,9 +6,9 @@
       <a class=import>Import</a>&nbsp|&nbsp
       <a class=reset>Reset Settings</a>&nbsp|&nbsp
       <input type=file hidden>
-    <a href='<%= meta.page %>' target=_blank><%= meta.name %></a> |
-    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/CHANGELOG.md' target=_blank>#{g.VERSION}</a> |
-    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/README.md#reporting-bugs-and-suggestions' target=_blank>Issues</a> |
+    <a href='<%= meta.page %>' target=_blank><%= meta.name %></a>&nbsp|&nbsp
+    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/CHANGELOG.md' target=_blank>#{g.VERSION}</a>&nbsp|&nbsp
+    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/README.md#reporting-bugs-and-suggestions' target=_blank>Issues</a>&nbsp|&nbsp
     <a href=javascript:; class='close fa fa-times' title=Close></a>
   </div>
 </nav>
