--- a/src/General/html/Settings/Sauce.html
+++ b/src/General/html/Settings/Sauce.html
@@ -1,4 +1,4 @@
-<div class=warning #{if Conf['Sauce'] then 'hidden' else ''}><code>Sauce</code> is disabled.</div>
+<div class=warning><code>Sauce</code> is disabled.</div>
 <div>Lines starting with a <code>#</code> will be ignored.</div>
 <div>You can specify a display text by appending <code>;text:[text]</code> to the URL.</div>
 <ul>These parameters will be replaced by their corresponding values:
