--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,4 +1,4 @@
-<span class=brackets-wrap id=returnlink><a href=/#{g.BOARD}/>Return</a></span> 
+<span class=brackets-wrap id=returnlink><a href=javascript:;>Return</a></span> 
 <span class=brackets-wrap id=cataloglink><a href=javascript:;>Catalog</a></span> 
 <span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
 <span class=brackets-wrap id="index-last-refresh"><time title="Last index refresh">...</time></span> 
