--- a/src/General/html/Settings/Filter-guide.html
+++ b/src/General/html/Settings/Filter-guide.html
@@ -1,4 +1,4 @@
-<div class=warning #{if Conf['Filter'] then 'hidden' else ''}><code>Filter</code> is disabled.</div>
+<div class=warning><code>Filter</code> is disabled.</div>
 <p>
   Use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions">regular expressions</a>, one per line.<br>
   Lines starting with a <code>#</code> will be ignored.<br>
