--- a/src/General/html/Settings/Settings.html
+++ b/src/General/html/Settings/Settings.html
@@ -7,7 +7,7 @@
       <a class=reset>Reset Settings</a>&nbsp|&nbsp
       <input type=file hidden>
     <a href='<%= meta.page %>' target=_blank><%= meta.name %></a>&nbsp|&nbsp
-    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/CHANGELOG.md' target=_blank>#{g.VERSION}</a>&nbsp|&nbsp
+    <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/CHANGELOG.md' target=_blank><%= version %></a>&nbsp|&nbsp
     <a href='<%= meta.repo %>issues' target=_blank>Issues</a>&nbsp|&nbsp
     <a href=javascript:; class='close fa fa-times' title=Close></a>
   </div>
