rewrite some code to make make safety more obvious

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -91,7 +91,12 @@
     <option value=Original>Original</option>
     <option value=Metro>Metro</option>
   </select>
-  <span class=favicon-preview></span>
+  <span class=favicon-preview>
+    <img src="data:image/gif;base64,R0lGODlhEAAQAPAAAAAAAAAAACH5BAEAAAAALAAAAAAQABAAAAIOhI%2Bpy%2B0Po5y02ouzPgUAOw%3D%3D">
+    <img src="data:image/gif;base64,R0lGODlhEAAQAPAAAAAAAAAAACH5BAEAAAAALAAAAAAQABAAAAIOhI%2Bpy%2B0Po5y02ouzPgUAOw%3D%3D">
+    <img src="data:image/gif;base64,R0lGODlhEAAQAPAAAAAAAAAAACH5BAEAAAAALAAAAAAQABAAAAIOhI%2Bpy%2B0Po5y02ouzPgUAOw%3D%3D">
+    <img src="data:image/gif;base64,R0lGODlhEAAQAPAAAAAAAAAAACH5BAEAAAAALAAAAAAQABAAAAIOhI%2Bpy%2B0Po5y02ouzPgUAOw%3D%3D">
+  </span>
 </fieldset>
 
 <fieldset>
@@ -101,7 +106,9 @@
       <option value="4chan SS">4chan SS</option>
       <option value="appchan">appchan</option>
     </select>
-    <span class=sage-icon-preview></span>
+    <span class=sage-icon-preview>
+      <img src="data:image/gif;base64,R0lGODlhEAAQAPAAAAAAAAAAACH5BAEAAAAALAAAAAAQABAAAAIOhI%2Bpy%2B0Po5y02ouzPgUAOw%3D%3D">
+    </span>
   </div>
   <div>
     Position: <select name=emojiPos>
