add bottom navlinks for JSON navigation

--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,6 +1,6 @@
-<span class=brackets-wrap id=returnlink><a href=javascript:;>Return</a></span> 
-<span class=brackets-wrap id=cataloglink><a href=javascript:;>Catalog</a></span> 
-<span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
-<span class=brackets-wrap id="index-last-refresh"><time title="Last index refresh">...</time></span> 
+<span class="brackets-wrap returnlink"><a href="javascript:;">Return</a></span> 
+<span class="brackets-wrap cataloglink"><a href="javascript:;">Catalog</a></span> 
+<span class="brackets-wrap bottomlink"><a href="#bottom">Bottom</a></span> 
+<span class="brackets-wrap" id="index-last-refresh"><time title="Last index refresh">...</time></span> 
 <input type="search" id="index-search" class="field" placeholder="Search">
 <a id="index-search-clear" href="javascript:;" title="Clear search">×</a>
